--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ textual-dev = "^1.6.1"
 requests = "^2.32.3"
 numpy = "^2.1.1"
 sounddevice = "^0.5.0"
+beautifulsoup4 = "^4.12.3"
 
 
 [build-system]
